@@ -3602,3 +3602,4 @@ PACKAGE: 2.2.99.2
  * Rearranged code in LogHandler for readability
  * Added optimisation to List.pm - no point caching a single item - now just
     does a get instead.
+ * Added microsecond timer to SQL do method (for debugging).
